@@ -1756,14 +1756,14 @@ BEGIN
     CONTROL         "Visible",IDC_VISIBLE_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,67,56,10
     CONTROL         "Static Rendering",IDC_STATIC_RENDERING_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,77,69,10
     CONTROL         "Reflection Enabled",IDC_REFLECT_ENABLED_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,87,76,10
-    CONTROL         "Render backfacing transparent",IDC_PRIMITIVE_ENABLE_BACKFACES,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,97,115,10
-    LTEXT           "Triangles (slower, but accurate)",IDC_STATIC5,16,108,101,9
     CONTROL         "Hide parts behind",IDC_PRIMITIVE_ENABLE_DEPTH_MASK,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,119,68,10
-    CONTROL         "Additive Blend",IDC_ADDBLEND,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,129,61,10
-    LTEXT           "Depth Bias",IDC_STATIC6,83,68,36,8
-    EDITTEXT        IDC_DEPTH_BIAS,83,77,36,12,ES_AUTOHSCROLL
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,97,68,10
+    CONTROL         "Render backfacing transparent",IDC_PRIMITIVE_ENABLE_BACKFACES,
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,108,115,10
+    LTEXT           "Triangles (slower, but accurate)",IDC_STATIC5,18,119,101,9
+    CONTROL         "Unshaded Additive Blend",IDC_ADDBLEND,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,129,115,10
+    LTEXT           "Depth Bias",IDC_STATIC6,83,66,36,8
+    EDITTEXT        IDC_DEPTH_BIAS,83,75,36,12,ES_AUTOHSCROLL
     COMBOBOX        IDC_LIGHTMAP,39,141,80,60,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     LTEXT           "&Lightmap",IDC_STATIC19,7,143,29,8
     GROUPBOX        "Material",IDC_STATIC7,3,161,119,131
@@ -1774,22 +1774,22 @@ BEGIN
     LTEXT           "Normal Map",IDC_STATIC9,7,209,39,8
     CONTROL         "Object Space",IDC_OBJECT_SPACE_NORMALMAP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,60,208,55,10
     COMBOBOX        DISPID_Image2,5,219,114,69,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    RTEXT           "Disable Lighting (0..1)",IDC_STATIC10,7,235,72,10
-    EDITTEXT        IDC_BLEND_DISABLE_LIGHTING,83,233,36,12,ES_AUTOHSCROLL
-    RTEXT           "Disable Lig.f.below (0..1)",IDC_STATIC11,7,249,72,10
-    EDITTEXT        IDC_BLEND_DISABLE_LIGHTING_FROM_BELOW,83,247,36,12,ES_AUTOHSCROLL
-    RTEXT           "&Modulate Color",IDC_STATIC12,7,263,72,8
-    CONTROL         "",IDC_COLOR_BUTTON1,"Button",BS_OWNERDRAW | WS_TABSTOP,82,260,36,14,WS_EX_DLGMODALFRAME | WS_EX_RIGHT
-    RTEXT           "Modulate Opacity",IDC_STATIC13,7,277,72,8
-    EDITTEXT        IDC_ALPHA_EDIT,83,276,36,12,ES_AUTOHSCROLL
+    RTEXT           "Disable Spot Lights (0..1)",IDC_STATIC10,5,235,85,10
+    EDITTEXT        IDC_BLEND_DISABLE_LIGHTING,93,233,26,12,ES_AUTOHSCROLL
+    RTEXT           "Disable Trans. Light (0..1)",IDC_STATIC11,5,249,85,10
+    EDITTEXT        IDC_BLEND_DISABLE_LIGHTING_FROM_BELOW,93,247,26,12,ES_AUTOHSCROLL
+    RTEXT           "Modulate Opacity (0..100)",IDC_STATIC13,7,263,82,8
+    EDITTEXT        IDC_ALPHA_EDIT,93,262,26,12,ES_AUTOHSCROLL
+    RTEXT           "&Modulate Color",IDC_STATIC12,7,277,82,8
+    CONTROL         "",IDC_COLOR_BUTTON1,"Button",BS_OWNERDRAW | WS_TABSTOP,92,274,26,14,WS_EX_DLGMODALFRAME | WS_EX_RIGHT
     GROUPBOX        "Reflections",IDC_STATIC14,3,294,119,40
     COMBOBOX        DISPID_REFLECTION_PROBE,5,304,114,124,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    RTEXT           "Strength",IDC_STATIC15,7,320,73,10
-    EDITTEXT        IDC_REFLECTION_AMOUNT,83,318,36,12,ES_AUTOHSCROLL
+    RTEXT           "Strength",IDC_STATIC15,7,320,82,10
+    EDITTEXT        IDC_REFLECTION_AMOUNT,93,318,26,12,ES_AUTOHSCROLL
     GROUPBOX        "Refractions",IDC_STATIC16,3,335,119,40
     COMBOBOX        DISPID_REFRACTION_PROBE,5,345,114,124,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    RTEXT           "Thickness",IDC_STATIC17,7,361,73,10
-    EDITTEXT        IDC_REFRACTION_THICKNESS,83,359,36,12,ES_AUTOHSCROLL
+    RTEXT           "Thickness",IDC_STATIC17,7,361,82,10
+    EDITTEXT        IDC_REFRACTION_THICKNESS,93,359,26,12,ES_AUTOHSCROLL
 END
 
 IDD_PROPPLUNGER_VISUALS DIALOGEX 0, 0, 125, 337
